changed actualserver path

--- a/bootstrap/kustomizations/kustomization-actualserver.yaml
+++ b/bootstrap/kustomizations/kustomization-actualserver.yaml
@@ -5,13 +5,13 @@ metadata:
   namespace: budget
 spec:
   interval: 15m
-  path: actualserver
+  path: ./actualserver
   prune: true # remove any elements later removed from the above path
   timeout: 2m # if not set, this defaults to interval duration, which is 1h
   sourceRef:
     kind: GitRepository
     name: flux-system
-  # validation: server
+  validation: server
   healthChecks:
     - apiVersion: apps/v1
       kind: Deployment
