--- a/bootstrap/kustomizations/kustomization-sealed-secrets.yaml
+++ b/bootstrap/kustomizations/kustomization-sealed-secrets.yaml
@@ -1,19 +1,18 @@
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
+apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: actualserver
+  name: sealed-secrets
   namespace: flux-system
 spec:
   interval: 15m
-  path: ./actualserver
+  path: ./sealed-secrets
   prune: true # remove any elements later removed from the above path
   timeout: 2m # if not set, this defaults to interval duration, which is 1h
   sourceRef:
     kind: GitRepository
     name: flux-system
-  validation: server
   healthChecks:
     - apiVersion: apps/v1
       kind: Deployment
-      name: actualserver
-      namespace: budget
+      name: sealed-secrets
+      namespace: sealed-secrets
