--- a/cert-manager/helmrelease-cert-manager.yaml
+++ b/cert-manager/helmrelease-cert-manager.yaml
@@ -12,5 +12,6 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: jetstack
+        namespace: flux-system
       version: 1.X
   interval: 10m0s
