--- a/portainer/helmrelease-portainer.yaml
+++ b/portainer/helmrelease-portainer.yaml
@@ -2,8 +2,8 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: podinfo
-  namespace: flux-system
+  name: portainer
+  namespace: portainer
 spec:
   chart:
     spec:
