--- a/portainer/helmrelease-portainer.yaml
+++ b/portainer/helmrelease-portainer.yaml
@@ -15,7 +15,7 @@ spec:
         namespace: flux-system
       version: 2.X
   interval: 15m0s
-  valuesFrom:
-    - kind: ConfigMap
-      name: portainer-helm-chart-value-overrides
-      valuesKey: values.yaml
+  # valuesFrom:
+  #   - kind: ConfigMap
+  #     name: portainer-helm-chart-value-overrides
+  #     valuesKey: values.yaml
