--- a/portainer/helmrelease-portainer.yaml
+++ b/portainer/helmrelease-portainer.yaml
@@ -13,7 +13,7 @@ spec:
         kind: HelmRepository
         name: portainer
         namespace: flux-system
-      version: 2.X
+      version: 2.x
   interval: 15m0s
   # valuesFrom:
   #   - kind: ConfigMap
