--- a/sealed-secrets/helmrelease-sealed-secrets.yaml
+++ b/sealed-secrets/helmrelease-sealed-secrets.yaml
@@ -16,6 +16,7 @@ spec:
   install:
     crds: Create
   interval: 1h0m0s
-  releaseName: sealed-secrets
+  releaseName: sealed-secrets-controller
+  targetNamespace: flux-system
   upgrade:
     crds: CreateReplace
