--- a/bootstrap/kustomizations/kustomization-sealed-secrets.yaml
+++ b/bootstrap/kustomizations/kustomization-sealed-secrets.yaml
@@ -15,4 +15,4 @@ spec:
     - apiVersion: apps/v1
       kind: Deployment
       name: sealed-secrets
-      namespace: sealed-secrets
+      namespace: flux-system
