--- a/sealed-secrets/helmrelease-sealed-secrets.yaml
+++ b/sealed-secrets/helmrelease-sealed-secrets.yaml
@@ -11,7 +11,7 @@ spec:
       reconcileStrategy: ChartVersion
       sourceRef:
         kind: HelmRepository
-        name: sealed-secrets
+        name: flux-system
       version: '>=1.15.0-0'
   install:
     crds: Create
