--- a/sealed-secrets/helmrelease-sealed-secrets.yaml
+++ b/sealed-secrets/helmrelease-sealed-secrets.yaml
@@ -3,7 +3,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: sealed-secrets
-  namespace: flux-system
+  namespace: sealed-secrets
 spec:
   chart:
     spec:
@@ -16,7 +16,6 @@ spec:
   install:
     crds: Create
   interval: 1h0m0s
-  releaseName: sealed-secrets-controller
-  targetNamespace: flux-system
+  releaseName: sealed-secrets
   upgrade:
     crds: CreateReplace
