--- a/sealed-secrets/helmrelease-sealed-secrets.yaml
+++ b/sealed-secrets/helmrelease-sealed-secrets.yaml
@@ -11,8 +11,9 @@ spec:
       reconcileStrategy: ChartVersion
       sourceRef:
         kind: HelmRepository
-        name: flux-system
-      version: '>=1.15.0-0'
+        name: sealed-secrets
+        namespace: flux-system
+      version: '>=2.15.0-0'
   install:
     crds: Create
   interval: 1h0m0s
