--- a/bootstrap/helmrepositories/helmrepository-tailscale.yaml
+++ b/bootstrap/helmrepositories/helmrepository-tailscale.yaml
@@ -1,9 +1,9 @@
 ---
-apiVersion: source.toolkit.fluxcd.io/v1
+apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: HelmRepository
 metadata:
   name: tailscale
   namespace: flux-system
 spec:
   interval: 15m
-  url: https://pkgs.tailscale.com/unstable/helmcharts
+  url: hhttps://pkgs.tailscale.com/helmcharts
