--- a/tailscale/helmrelease-tailscale-operator.yaml
+++ b/tailscale/helmrelease-tailscale-operator.yaml
@@ -13,7 +13,7 @@ spec:
         kind: HelmRepository
         name: tailscale
         namespace: flux-system
-      version: 0.X
+      version: '>=0.1.0'
   interval: 15m0s
   valuesFrom:
     - kind: ConfigMap
