--- a/tailscale/configmap-tailscale-operator-helm-chart-value-overrides.yaml
+++ b/tailscale/configmap-tailscale-operator-helm-chart-value-overrides.yaml
@@ -37,7 +37,7 @@ data:
         tag: ""
         digest: ""
         pullPolicy: Always
-      logging: "info" # info, debug, dev
+      logging: "debug" # info, debug, dev
       hostname: "tailscale-operator"
       nodeSelector:
         kubernetes.io/os: linux
