--- a/tailscale/configmap-tailscale-operator-helm-chart-value-overrides.yaml
+++ b/tailscale/configmap-tailscale-operator-helm-chart-value-overrides.yaml
@@ -27,7 +27,7 @@ data:
       # https://tailscale.com/kb/1236/kubernetes-operator/?q=operator#setting-up-the-kubernetes-operator
       # Multiple tags are defined as array items and passed to the operator as a comma-separated string
       defaultTags:
-        - "tag:k8s-operator"
+        - "k8s-operator"
 
       image:
         # Repository defaults to DockerHub, but images are also synced to ghcr.io/tailscale/k8s-operator.
