--- a/tailscale/configmap-tailscale-operator-helm-chart-value-overrides.yaml
+++ b/tailscale/configmap-tailscale-operator-helm-chart-value-overrides.yaml
@@ -26,8 +26,8 @@ data:
       # these tags
       # https://tailscale.com/kb/1236/kubernetes-operator/?q=operator#setting-up-the-kubernetes-operator
       # Multiple tags are defined as array items and passed to the operator as a comma-separated string
-      defaultTags:
-        - "k8s-operator"
+      # defaultTags:
+      #  - "k8s-operator"
 
       image:
         # Repository defaults to DockerHub, but images are also synced to ghcr.io/tailscale/k8s-operator.
@@ -83,7 +83,7 @@ data:
       # https://tailscale.com/kb/1236/kubernetes-operator/?q=operator#setting-up-the-kubernetes-operator
       # Multiple tags can be passed as a comma-separated string i.e 'tag:k8s-proxies,tag:prod'.
       # Note that if you pass multiple tags to this field via `--set` flag to helm upgrade/install commands you must escape the comma (for example, "tag:k8s-proxies\,tag:prod"). See https://github.com/helm/helm/issues/1556
-      defaultTags: "tag:k8s"
+      # defaultTags: "tag:k8s"
       firewallMode: auto
       # If defined, this proxy class will be used as the default proxy class for
       # service and ingress resources that do not have a proxy class defined.
