--- a/podinfo/configmap-podinfo-helm-chart-value-overrides.yaml
+++ b/podinfo/configmap-podinfo-helm-chart-value-overrides.yaml
@@ -8,7 +8,7 @@ data:
   values.yaml: |-
     # Default values for podinfo.
 
-    replicaCount: 0
+    replicaCount: 1
     logLevel: info
     host: #0.0.0.0
     backend: #http://backend-podinfo:9898/echo
@@ -103,20 +103,20 @@ data:
     securityContext: {}
 
     ingress:
-      enabled: false
-      className: ""
-      annotations: {}
-        # kubernetes.io/ingress.class: nginx
+      enabled: true
+      className: "tailscale"
+      annotations: 
+        kubernetes.io/ingress.class: nginx
         # kubernetes.io/tls-acme: "true"
-      hosts:
-        - host: podinfo.local
-          paths:
-            - path: /
-              pathType: ImplementationSpecific
-      tls: []
-      #  - secretName: chart-example-tls
-      #    hosts:
-      #      - chart-example.local
+      # hosts:
+      #   - host: podinfo
+      #     paths:
+      #       - path: /
+      #         pathType: ImplementationSpecific
+      tls:
+       # - secretName: chart-example-tls
+         hosts:
+           - podinfo
 
     linkerd:
       profile:
