--- a/bootstrap/kustomizations/kustomization-tailscale.yaml
+++ b/bootstrap/kustomizations/kustomization-tailscale.yaml
@@ -15,5 +15,5 @@ spec:
   healthChecks:
     - apiVersion: apps/v1
       kind: Deployment
-      name: tailscale-operator
+      name: operator
       namespace: tailscale
