--- a/podinfo/configmap-podinfo-helm-chart-value-overrides.yaml
+++ b/podinfo/configmap-podinfo-helm-chart-value-overrides.yaml
@@ -31,8 +31,9 @@ data:
     # Kubernetes Service settings
     service:
       enabled: true
-      annotations: {}
-      type: ClusterIP
+      annotations:
+        tailscale.com/expose: "true"
+      type: LoadBalancer
       metricsPort: 9797
       httpPort: 9898
       externalPort: 9898
