added annotation to service

--- a/apache-web/configmap-apache-web-helm-chart-value-overrides.yaml
+++ b/apache-web/configmap-apache-web-helm-chart-value-overrides.yaml
@@ -462,7 +462,6 @@ data:
       ## @param service.type Apache Service type
       ##
       type: LoadBalancer
-      loadBalancerClass: tailscale
       ## @param service.ports.http Apache service HTTP port
       ## @param service.ports.https Apache service HTTPS port
       ##
@@ -496,7 +495,8 @@ data:
       ## This can be used to set the LoadBalancer service type to internal only.
       ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#internal-load-balancer
       ##
-      annotations: {}
+      annotations:
+        tailscale.com/expose: "true"
       ## @param service.externalTrafficPolicy Apache service external traffic policy
       ## ref https://kubernetes.io/docs/tasks/access-application-cluster/create-external-load-balancer/#preserving-the-client-source-ip
       ##
