--- a/portainer/configmap-portainer-helm-chart-value-overrides.yaml
+++ b/portainer/configmap-portainer-helm-chart-value-overrides.yaml
@@ -6,10 +6,46 @@ metadata:
   namespace: portainer
 data:
   values.yaml: |-
-    persistence:
-      enabled: true
+    # Default values for portainer.
+    # This is a YAML-formatted file.
+    # Declare variables to be passed into your templates.
+
+    replicaCount: 1
+
+    image:
+      repository: portainer/portainer-ce
+      tag: latest
+      pullPolicy: IfNotPresent
+
+    imagePullSecrets: []
+
+    serviceAccount:
+      annotations: {}
+      name: portainer-sa-clusteradmin
+
     service:
+      # Set the httpNodePort and edgeNodePort only if the type is NodePort
+      # For Ingress, set the type to be ClusterIP and set ingress.enabled to true
+      # For Cloud Providers, set the type to be LoadBalancer
       type: LoadBalancer
-      httpPort: 9000
-      httpNodePort: 30777
- 
+      annotations:
+        tailscale.com/expose: "true"
+        tailscale.com/hostname: "portainer.dzo-byzantine.ts.net"
+      # httpPort: 9000
+      # httpNodePort:
+      # edgePort: 8000
+      # edgeNodePort:
+
+    ingress:
+      enabled: false
+      annotations: {}
+      hosts:
+        - host:
+          paths: []
+      tls: []
+
+    resources: {}
+
+    persistence:
+      size: "1Gi"
+      annotations: {}
