--- a/portainer/configmap-portainer-helm-chart-value-overrides.yaml
+++ b/portainer/configmap-portainer-helm-chart-value-overrides.yaml
@@ -30,7 +30,7 @@ data:
       type: LoadBalancer
       annotations:
         tailscale.com/expose: "true"
-        tailscale.com/hostname: "portainer.dzo-byzantine.ts.net"
+        tailscale.com/hostname: portainer
       # httpPort: 9000
       # httpNodePort:
       # edgePort: 8000
