--- a/apache-web/configmap-apache-web-helm-chart-value-overrides.yaml
+++ b/apache-web/configmap-apache-web-helm-chart-value-overrides.yaml
@@ -497,7 +497,7 @@ data:
       ##
       annotations:
         tailscale.com/expose: "true"
-        tailscale.com/hostname: apache
+        tailscale.com/hostname:"apache"
       ## @param service.externalTrafficPolicy Apache service external traffic policy
       ## ref https://kubernetes.io/docs/tasks/access-application-cluster/create-external-load-balancer/#preserving-the-client-source-ip
       ##
