add loadBalancer service type to actual

--- a/actualserver/actualserver-helm-chart-value-overrides.yaml
+++ b/actualserver/actualserver-helm-chart-value-overrides.yaml
@@ -13,9 +13,10 @@ data:
       annotations:
         tailscale.com/expose: "true"
         tailscale.com/hostname: "budget"
-      main:
-        ports:
-          main:
-            port: 10293
-            protocol: http
-            targetPort: 5006
+      type: LoadBalancer
+      # main:
+        # ports:
+        #   main:
+        #     port: 10293
+        #     protocol: http
+        #     targetPort: 5006
