--- a/nginx-ingress-controller/configmap-nginx-ingress-controller-helm-chart-values-overrides.yaml
+++ b/nginx-ingress-controller/configmap-nginx-ingress-controller-helm-chart-values-overrides.yaml
@@ -72,13 +72,13 @@ data:
     image:
       registry: docker.io
       repository: bitnami/nginx-ingress-controller
-      tag: 1.11.2-debian-12-r2
+      tag: latest
       digest: ""
       ## Specify a imagePullPolicy
       ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
       ## ref: https://kubernetes.io/docs/concepts/containers/images/#pre-pulled-images
       ##
-      pullPolicy: IfNotPresent
+      pullPolicy: Always
       ## Optionally specify an array of imagePullSecrets.
       ## Secrets must be manually created in the namespace.
       ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
