fixed service name

--- a/actualserver/ingress-actualserver.yaml
+++ b/actualserver/ingress-actualserver.yaml
@@ -10,6 +10,6 @@ spec:
     - actualserver
   defaultBackend:
     service:
-      name: actual
+      name: actualserver
       port:
         number: 5006
